# amps-rust-ffi

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  build.rs  wiggum.sh
.github/workflows/: test.yml
c-wrapper/: CMakeLists.txt
c-wrapper/include/: amps_ffi.h
c-wrapper/src/: amps_ffi.cpp  zlib_shim.c
c-wrapper/tests/: test_header.c
example/: Cargo.toml
example/src/: main.rs
src/: client.rs  error.rs  lib.rs  message.rs  subscription.rs
src/ffi/: mod.rs
tests/: integration_tests.rs
tests/docker/: Dockerfile  amps-config.xml  docker-compose.yml
tests/docker/config/: env.xml  test-env.xml
tests/docker/scripts/: publish.sh  sow.sh
tests/docker/scripts/messages/: messages.txt
