[package]
name = "amps-rust-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
thiserror = "1.0"
log = "0.4"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"

[dev-dependencies]
bindgen = "0.69"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
