[workspace]
members = [".", "example"]

[package]
name = "amps-rust-ffi"
version = "0.1.3"
edition = "2021"
description = "Safe Rust bindings for the AMPS (Advanced Message Processing System) C++ client library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jamesyeap/amps-rust-ffi"
keywords = ["amps", "messaging", "ffi", "pubsub", "sow"]
categories = ["api-bindings", "network-programming"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "build.rs",
    "amps-client/LICENSE",
    "amps-client/lib/**/*.a",
    "amps-client/include/**/*.h",
    "amps-client/include/**/*.hpp",
    "c-wrapper/build/libamps_ffi.a",
    "c-wrapper/include/*.h",
    "c-wrapper/src/*.cpp",
    "c-wrapper/src/*.c",
    "c-wrapper/CMakeLists.txt",
]

[dependencies]
libc = "0.2"
thiserror = "1.0"
log = "0.4"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"

[dev-dependencies]
bindgen = "0.69"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
