[package]
name = "amps-example"
version = "0.1.1"
edition = "2021"
description = "Example usage of the amps-rust-ffi crate"
license = "MIT"
repository = "https://github.com/yourusername/amps-rust-ffi"

[[bin]]
name = "amps-examples"
path = "src/main.rs"

[[bin]]
name = "chat"
path = "src/bin/chat.rs"

[dependencies]
amps-rust-ffi = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
